add route to product info app

--- a/TwoWayBinding (Product Info Table)/info-table/src/app/app.component.html
+++ b/TwoWayBinding (Product Info Table)/info-table/src/app/app.component.html
@@ -1,1 +1,20 @@
-<app-info-table></app-info-table>
+<h1>Product Information</h1>
+<nav>
+  <button
+    type="button"
+    class="btn"
+    routerLink="/home"
+    routerLinkActive="btn-primary"
+  >
+    First Component
+  </button>
+  <button
+    type="button"
+    class="btn"
+    routerLink="/product-info"
+    routerLinkActive="btn-primary"
+  >
+    Second Component
+  </button>
+</nav>
+<router-outlet></router-outlet>
