add http to product info app

--- a/TwoWayBinding (Product Info Table)/info-table/src/app/components/product-info-table/product-info-table.component.css
+++ b/TwoWayBinding (Product Info Table)/info-table/src/app/components/product-info-table/product-info-table.component.css
@@ -13,6 +13,9 @@ table {
   #search{
     width: 500px;
     padding: 5px;
-    margin: 20px;
+    margin: 10px;
     margin-left: 0px;
+  }
+  .add-button{
+    margin-bottom: 10px;
   }
